# form-builder

./: Cargo.toml  README.md  form1.json  listRepo.py
src/: forms.rs  forms_test.rs  lib.rs
www/: index.html  styles.css
www/scripts/: form-gen.js
