[package]
name = "form_builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
log = "0.4"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = { version = "0.1", optional = true }


[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_handling"]
console_error_handling = ["console_error_panic_hook"]

